// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorsCitationView renders  component with no contributors 1`] = `
<AuthorsCitationView
  className="citationEditors"
  publication={Object {}}
  searchKey={
    Object {
      "key": "fez_record_search_key_contributor",
      "order": "rek_contributor_order",
      "subkey": "rek_contributor",
    }
  }
/>
`;

exports[`EditorsCitationView renders  component with one contributor 1`] = `
<AuthorsCitationView
  className="citationEditors"
  publication={
    Object {
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Pedroso, Marcelo Monteiro",
          "rek_contributor_id": null,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_contributor",
      "order": "rek_contributor_order",
      "subkey": "rek_contributor",
    }
  }
/>
`;

exports[`EditorsCitationView renders  component with three contributors 1`] = `
<AuthorsCitationView
  className="citationEditors"
  publication={
    Object {
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Pedroso, Marcelo Monteiro",
          "rek_contributor_id": null,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:678742",
        },
        Object {
          "rek_contributor": "Smith, J",
          "rek_contributor_id": null,
          "rek_contributor_order": 2,
          "rek_contributor_pid": "UQ:678742",
        },
        Object {
          "rek_contributor": "Andersen, J",
          "rek_contributor_id": null,
          "rek_contributor_order": 3,
          "rek_contributor_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_contributor",
      "order": "rek_contributor_order",
      "subkey": "rek_contributor",
    }
  }
/>
`;

exports[`EditorsCitationView renders  component with two contributors 1`] = `
<AuthorsCitationView
  className="citationEditors"
  publication={
    Object {
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Pedroso, Marcelo Monteiro",
          "rek_contributor_id": null,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:678742",
        },
        Object {
          "rek_contributor": "Smith, J",
          "rek_contributor_id": null,
          "rek_contributor_order": 2,
          "rek_contributor_pid": "UQ:678742",
        },
      ],
    }
  }
  searchKey={
    Object {
      "key": "fez_record_search_key_contributor",
      "order": "rek_contributor_order",
      "subkey": "rek_contributor",
    }
  }
/>
`;
